--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Random Stuff</title>
+    <title>CA PRODUCTIONS</title>
   </head>
   <body>
     <h1>Random Stuff</h1>
