--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CA PRODUCTIONS</title>
+    <title>CA PRODUCTIONs</title>
   </head>
   <body>
     <h1>Random Stuff</h1>
-    <p>This is just some random stuff.</p>
+    <p>Ca Productoins Home.</p>
   </body>
 </html>
