--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CA PRODUCTIONs</title>
+    <title>CA Productions</title>
   </head>
   <body>
-    <h1>Random Stuff</h1>
+    <h1>CA Productions Home Page</h1>
     <p>Ca Productoins Home.</p>
   </body>
 </html>
