--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>CA Productions Home Page</h1>
-    <p>Ca Productoins Home.</p>
+    <p>CA Productions Home.</p>
   </body>
 </html>
