--- a/coolstuff.html
+++ b/coolstuff.html
@@ -1,3 +1,4 @@
 <h1>Cool Stuff</h1>
 <p>Copy and paste this into the URL of a bookmark to be able to edit websites:</p>
-<p>javascript:document.body.contentEditable = 'true'; document.designMode='on'; void 0</p>
+<pre>javascript:document.body.contentEditable = 'true'; document.designMode='on'; void 0</pre>
+<p></p>
