--- a/myfavgames.html
+++ b/myfavgames.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Ashden's Website</title>
+        <title>Best Games To Play</title>
         <style>
             
             body{
@@ -22,7 +22,7 @@
     </head>
     <body>
 <h1>My Favorite Video Games.</h1>
-    <p>This Is A List Of My Favorite Video Games!</p>
+    <p>This Is A List Of The Best Video Games Out There!</p>
     
 <ul>
     <li><a href="#minecraft_img">Minecraft</a></li>
