--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>CA Productions Home Page</h1>
     <p>CA Productions Home.</p>
+    <p>Check Out Our Favorite Rated hmes <a href="/home/the-best-video-games.html">Here</a></p>
   </body>
 </html>
