--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>CA Productions</title>
+    <style>
+    body{
+    background-color:rgb(255, 0, 0;
+    }
+    </style>
   </head>
   <body>
     <h1>CA Productions Home Page</h1>
     <p>CA Productions Home.</p>
-    <p>Check Out Our Favorite Rated games <a href="/home/the-best-video-games.html">Here</a></p>
+    <p>Check Out Our Favorite Rated games <a href="/home/the-best-video-games.html">Here</a><br>Also There Are Some Cool Things You Can Do <a href="/home/coolstuff.html">Here</a></p>
   </body>
 </html>
