--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CA Productions</title>
     <style>
     body{
-    background-color:rgb(255, 0, 0;
+    background-color:rgb(255, 0, 0);
     }
     </style>
   </head>
