--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <body>
     <h1>CA Productions Home Page</h1>
     <p>CA Productions Home.</p>
-    <p>Check Out Our Favorite Rated games <a href="/home/the-best-video-games.html">Here</a><br>Also There Are Some Cool Things You Can Do <a href="/home/coolstuff.html">Here</a></p>
+    <p>Check Out Our Favorite Rated games <a href="/home/the-best-video-games.html">Here</a><br>Also There Are Some Cool Things You Can Do <a href="/home/coolstuff.html">Here</a><br>Check Out Our Scratch Projects <a href="/home/scratch.html">Here</a></p>
   </body>
 </html>
