--- a/scratch.html
+++ b/scratch.html
@@ -1,2 +1,36 @@
 <iframe src="https://scratch.mit.edu/projects/536299965/embed" allowtransparency="true" width="1920" height="1080" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <br><p>Credit To The <a href="https://scratch.mit.edu">Scratch Team</a> And MIT
+  <br>
+  <br>
+  <p>--Instructions--<br>
+Use Your Boomerang to Slice Your Opponent and Get Score.<br>
+Every Few Seconds A Power-Up Book Will Spawn They Can Carry Multiple Powers.<br> You Can Carry Up To 3 Powers at a Time, If You Collect<br> More Than 3 Power-Ups Then the First Power Up You<br> Collected Will Be Replaced by the New One<br> You Got.
+<br>--Controls--<br>
+==== P1 ==== (Sushi)<br>
+W - Move Up<br>
+A - Move Left<br>
+S - Move Down<br>
+D - Move Right<br>
+E - Throw Boomerang<br>
+Q - Dash<br>
+R - Recall Boomerang<br>
+==== P2 ==== (Watermelon)<br>
+Up Arrow - Move Up<br>
+Left Arrow - Move Left<br>
+Down Arrow - Move Down<br>
+Right Arrow - Move Right<br>
+"/" Key - Throw Boomerang<br>
+"." Key - Dash<br>
+"," Key - Recall Boomerang<br>
+==== Other ====<br>
+Space - Switch Stage<br>
+1 - Map Controls<br>
+2 - Spawn Power Up Book<br>
+--Power-Ups--<br>
+====Released====<br>
+Caffeinated - Move Twice as Fast<br>
+Disguise - While Not Moving or Holding Any Keys You Can Disguise into Your Environment<br>
+Teleport Boomerang - Teleport to Your Boomerang<br>
+Fire Boomerang - Leave A Trail of Fire Behind Your Boomerang That Wil Toast Enemies<br>
+====Coming Soon====<br>
+Telekinesis - Control Your Boomerang with Your Mind And Strike enimies Form The Shadows<br>
