--- a/boomerangfu.html
+++ b/boomerangfu.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>CA - Scratch - Boomerang Fu</title>
+      <style>
+        body{
+          background-color:rgb(255, 179, 25);
+        }
+      </style>
+    </head>
+    <body>
 <iframe src="https://scratch.mit.edu/projects/536299965/embed" allowtransparency="true" width="1920" height="1080" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <br><p>Credit To The <a href="https://scratch.mit.edu">Scratch Team</a> And MIT
   <br>
@@ -34,3 +46,7 @@ Teleport Boomerang - Teleport to Your Boomerang<br>
 Fire Boomerang - Leave A Trail of Fire Behind Your Boomerang That Wil Toast Enemies<br>
 ====Coming Soon====<br>
 Telekinesis - Control Your Boomerang with Your Mind And Strike enimies Form The Shadows<br>
+
+
+    </body>
+</html>
