--- a/minecraft3d.html
+++ b/minecraft3d.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>CA - Scratch - Boomerang Fu</title>
+        <title>CA - Scratch - Minecraft 3D</title>
       <style>
         body{
           background-color:rgb(255, 179, 25);
