--- a/scratch.html
+++ b/scratch.html
@@ -30,6 +30,8 @@ Scratch is designed, developed, and moderated by the Scratch Foundation, a nonpr
       width="100" alt="DrSmashsenstien's scratch profile picture.">DrSmashsenstien</a></h3>
         
         <h4><a target="_blank" href="/home/boomerangfu.html">Boomerang Fu<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/Screenshot%202021-11-09%209.45.20%20PM.png" width="300" ></a></h4>
-        
+        <br>
+        <br>
+         <h4><a target="_blank" href="/home/minecraft3d.html">Minecraft 3D<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/1.png" width="300" ></a></h4>
     </body>
 </html>
