--- a/scratch.html
+++ b/scratch.html
@@ -29,9 +29,12 @@ Scratch is designed, developed, and moderated by the Scratch Foundation, a nonpr
       <h3 class="username"><a target="_blank" href="https://scratch.mit.edu/users/DrSmashsenstien/"><img src="https://cdn2.scratch.mit.edu/get_image/user/44079570_48x48.png"
       width="100" alt="DrSmashsenstien's scratch profile picture.">DrSmashsenstien</a></h3>
         
-        <h4><a target="_blank" href="/home/boomerangfu.html">Boomerang Fu<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/Screenshot%202021-11-09%209.45.20%20PM.png" width="300" ></a></h4>
+        <h4><a href="/home/boomerangfu.html">Boomerang Fu<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/Screenshot%202021-11-09%209.45.20%20PM.png" width="300" ></a></h4>
         <br>
         <br>
-         <h4><a target="_blank" href="/home/minecraft3d.html">Minecraft 3D<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/1.png" width="300" ></a></h4>
+         <h4><a href="/home/minecraft3d.html">Minecraft 3D<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/1.png" width="300" ></a></h4>
+          <br>
+        <br>
+         <h4><a href="/home/lightsaber.html">Light Saber Maker<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/Screenshot%202021-11-10%209.22.22%20AM.png" width="300" ></a></h4>
     </body>
 </html>
