--- a/scratch.html
+++ b/scratch.html
@@ -36,5 +36,9 @@ Scratch is designed, developed, and moderated by the Scratch Foundation, a nonpr
           <br>
         <br>
          <h4><a href="/home/lightsaber.html">Light Saber Maker<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/Screenshot%202021-11-10%209.22.22%20AM.png" width="300" ></a></h4>
+        <br>
+        <br>
+         <h3 class="username"><a target="_blank" href="https://scratch.mit.edu/users/cam0studios/"><img src="https://cdn2.scratch.mit.edu/get_image/user/default_60x60.png"
+      width="100" alt="Cam0studios's scratch profile picture.">Cam0studios</a></h3>
     </body>
 </html>
