--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CA Productions</title>
+    <title>CA - Home</title>
     <style>
     body{
-    background-color:rgb(255, 0, 0);
+    background-color:rgb(0, 0 0);
     }
+    .indexpx{
+      font-size:40px;
+      }
     </style>
   </head>
   <body>
-    <h1>CA Productions Home Page</h1>
-    <p>CA Productions Home.</p>
-    <p>Check Out Our Favorite Rated games <a href="/home/the-best-video-games.html">Here</a><br>Also There Are Some Cool Things You Can Do <a href="/home/coolstuff.html">Here</a><br>Check Out Our Scratch Projects <a href="/home/scratch.html">Here</a></p>
+    <h1 class="indexpx">CA Productions Home Page</h1>
+    <p class="indexpx">CA Productions Home.</p>
+    <p class="indexpx">Check Out Our Favorite Rated games <a href="/home/the-best-video-games.html">Here</a><br>Also There Are Some Cool Things You Can Do <a href="/home/coolstuff.html">Here</a><br>Check Out Our Scratch Projects <a href="/home/scratch.html">Here</a></p>
   </body>
 </html>
