--- a/scratch.html
+++ b/scratch.html
@@ -6,10 +6,15 @@
       <style>
         body{
          background-color:rgb(255, 179, 25); 
+			text-align:center;
         }
         .username{
         font-size:50px; 
         }
+		  .link{
+			text-decoration:none;
+			color:blue;
+		  }
       </style>
     </head>
     <body>
@@ -25,31 +30,33 @@ Scratch is designed, developed, and moderated by the Scratch Foundation, a nonpr
       <h2>Projects By Us</h2>
       <p> These are some projects that we have created on scratch and would like to share with you<br> Make Sure To Set The Page Zoom to <b>67%</b>
 		
-      <h3 class="username"><a target="_blank" href="https://scratch.mit.edu/users/DrSmashsenstien/"><img src="https://cdn2.scratch.mit.edu/get_image/user/44079570_48x48.png"
+      <h3 class="username"><a target="_blank" href="https://scratch.mit.edu/users/DrSmashsenstien/" class="link"><img src="https://cdn2.scratch.mit.edu/get_image/user/44079570_48x48.png"
       width="100" alt="DrSmashsenstien's scratch profile picture.">DrSmashsenstien</a></h3>
       
 		
+		<div style="background-color:gray;">
 		<details>
 		<summary>
 		Show All
 		</summary>
 		<ul>
-		<li><a href="#boomerangfu_jump">Boomerang Fu</a></li>
-		<li><a href="#minecraft3d_jump">Minecraft 3D</a></li>
-		<li><a href="#lightsaber_jump">Light Saber Maker</a></li>
+		<li><a href="#boomerangfu_jump" class="link">Boomerang Fu</a></li>
+		<li><a href="#minecraft3d_jump" class="link">Minecraft 3D</a></li>
+		<li><a href="#lightsaber_jump" class="link">Light Saber Maker</a></li>
 		</ul>
 		</details>
+		</div>
 		
-        <h4 id="boomerangfu_jump" ><a href="/home/boomerangfu.html">Boomerang Fu<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/Screenshot%202021-11-09%209.45.20%20PM.png" width="300" ></a></h4>
+        <h4 id="boomerangfu_jump"><a href="/home/boomerangfu.html" class="link">Boomerang Fu<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/Screenshot%202021-11-09%209.45.20%20PM.png" width="300" ></a></h4>
         <br>
         <br>
-         <h4 id="minecraft3d_jump"><a href="/home/minecraft3d.html">Minecraft 3D<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/1.png" width="300" ></a></h4>
+         <h4 id="minecraft3d_jump"><a href="/home/minecraft3d.html" class="link">Minecraft 3D<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/1.png" width="300" ></a></h4>
           <br>
         <br>
-         <h4 id="lightsaber_jump"><a href="/home/lightsaber.html">Light Saber Maker<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/Screenshot%202021-11-10%209.22.22%20AM.png" width="300" ></a></h4>
+         <h4 id="lightsaber_jump"><a href="/home/lightsaber.html" class="link">Light Saber Maker<br><img src="https://raw.githubusercontent.com/CAProductions/home/main/Screenshot%202021-11-10%209.22.22%20AM.png" width="300" ></a></h4>
         <br>
         <br>
-         <h3 class="username"><a target="_blank" href="https://scratch.mit.edu/users/cam0studios/"><img src="https://cdn2.scratch.mit.edu/get_image/user/default_60x60.png"
+         <h3 class="username"><a target="_blank" href="https://scratch.mit.edu/users/cam0studios/" class="link"><img src="https://cdn2.scratch.mit.edu/get_image/user/default_60x60.png"
       width="100" alt="Cam0studios's scratch profile picture.">Cam0studios</a></h3>
     </body>
 </html>
