--- a/index.html
+++ b/index.html
@@ -5,18 +5,29 @@
     <title>CA - Home</title>
     <style>
     body{
-    background-color:rgb(255, 170, 170);
+    background-color:rgb(0, 0, 0);
     }
     .indexpx{
       font-size:40px;
+      color:rgb(255, 255, 255);
       }
+      .link{
+			text-decoration:none;
+			color:blue;
+		  }
     </style>
   </head>
   <body>
     <h1 class="indexpx">CA Productions Home Page</h1>
     <p class="indexpx">CA Productions Home.</p>
-    <p class="indexpx">Check Out Our Favorite Rated games <a href="/home/the-best-video-games.html">Here</a><br>
-      Also There Are Some Cool Things You Can Do <a href="/home/coolstuff.html">Here</a><br>
-      Check Out Our Scratch Projects <a href="/home/scratch.html">Here</a></p>
+    <p class="indexpx">Check Out Our Favorite Rated games <a href="/home/the-best-video-games.html" class="link">Here</a><br>
+      Also There Are Some Cool Things You Can Do <a href="/home/coolstuff.html" class="link">Here</a><br>
+      Check Out Our Scratch Projects <a href="/home/scratch.html" class="link">Here</a></p>
+      <a href="https://Caproductions.github.io/home">
+        <button class="button">
+    Meet The Creators
+       
+    </button>
+    </a>
   </body>
 </html>
