--- a/scratch.html
+++ b/scratch.html
@@ -6,7 +6,7 @@
       <style>
         body{
          background-color:rgb(255, 179, 25); 
-			text-align:center;
+			text-align:justify;
         }
         .username{
         font-size:50px; 
@@ -34,7 +34,7 @@ Scratch is designed, developed, and moderated by the Scratch Foundation, a nonpr
       width="100" alt="DrSmashsenstien's scratch profile picture.">DrSmashsenstien</a></h3>
       
 		
-		<div style="background-color:gray;">
+		<div style="background-color:gray; width:200px; text-align:center;">
 		<details>
 		<summary>
 		Show All
