--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <p class="indexpx">CA Productions Home.</p>
     <p class="indexpx">Check Out Our Favorite Rated games <a href="/home/the-best-video-games.html" class="link">Here</a><br>
       Also There Are Some Cool Things You Can Do <a href="/home/coolstuff.html" class="link">Here</a><br>
-      Check Out Our Scratch Projects <a href="/home/scratch.html" class="link">Here</a></p>
+      Check Out Our Scratch Projects <a href="/home/scratch.html" class="link">Here</a><br>
+	  Find out how to create your own website just like this <a href="/home/learnhtml.html">here</a><br></p>
       <a href="https://Caproductions.github.io/home">
         <button class="button">
     Meet The Creators
