--- a/learnhtml.html
+++ b/learnhtml.html
@@ -47,7 +47,7 @@
     <body>
    <h1 class="header" style="background-color:red; position:fixed; top:-5px; z-index:100;">CAProductions HTML Tutorial</h1>
    <h1 class="header" style="background-color:red; position:fixed; right:10px; top:-5px; z-index:101; "><a href="/home/" style="text-decoration:none; color:white;">Back To Home Page</a></h1>
-   <details class="header" style="background-color:red; position:fixed; right:350px; top:20px; z-index:102; font-size:2em; ">
+   <details class="header" style="background-color:red; position:fixed; right:500px; top:20px; z-index:102; font-size:2em; ">
        <summary>
            <b>Jump To</b>
        </summary>
@@ -172,5 +172,122 @@ He Was So Mad That He Was Beaten By A 3rd Grader</p>
 <p>"Doing Great" Jhon said Sarcasticly</p>
    </div>
    <h3 id="l4">Lesson 4: Headers</h3>
+	<p>So Right Now Our text is kinda Small, And Say i want to make a book. I need A <b>Title</b> and A <b>Chapter Title</b>.<br>Lets Add A Header To Our Webpage. You Can Use The &lt;h1> Tag for that. <br> The 1 In &lt;h1> Is THe Size, 1 is the biggest 6 is the smallest. Im Going to add a title And A Chapter To My Code:</p>
+	  <div class="code"><p>&lt;!DOCTYPE html>
+   <br>
+   &lt;html>
+   <br>
+   &lt;head>
+   <br>
+   &lt;meta charset="utf-8">
+   <br>
+   &lt;title>Example&lt;/title>
+   <br>
+   &lt;/head>
+   <br>
+   &lt;body>
+	<br>
+	&lt;h1>Jhon And The Speedy Kid&lt;/h1>
+   <br>
+	&lt;h3>Chapter 1: The Loss&lt;/h3>
+   &lt;p>Jhon slamed The Door Shut &lt;br> He Was So Mad That He Was Beaten By A 3rd Grader&lt;/p>
+   <br>
+   &lt;p>"Are you okay up There?" His Mom Called&lt;/p>
+   <br>
+   &lt;p>"Doing Great" Jhon said Sarcasticly&lt;/p>
+   <br>
+   &lt;/body>
+   <br>
+   &lt;/html>
+   </p></div>
+	<p>heres What it would look like:</p>
+	<div class="codeex"><h1>Jhon And The Speedy Kid</h1>
+<h3>Chapter 1: The Loss</h3>
+<p>Jhon slamed The Door Shut <br> He Was So Mad That He Was Beaten By A 3rd Grader</p>
+<p>"Are you okay up There?" His Mom Called</p>
+<p>"Doing Great" Jhon said Sarcasticly</p>
+   </div>
+	<h3 id="l5">Lesson 5: CSS</h3>
+<p> Now That You Know How To Get Text On your screen You Might Want to start Changing The Colors Of the bacground and text, Right?<br>For That We Are Going to need CSS, First Step Lets Add A &lt;style> Tag Underneath or &lt;title> Tag in our head:</p>
+  <div class="code"><p>&lt;!DOCTYPE html>
+   <br>
+   &lt;html>
+   <br>
+   &lt;head>
+   <br>
+   &lt;meta charset="utf-8">
+   <br>
+   &lt;title>Example&lt;/title>
+   <br>
+	&lt;style>
+	<br>
+	<br>
+	&lt;/style>
+	<br>
+   &lt;/head>
+   <br>
+   &lt;body>
+	<br>
+	&lt;h1>Jhon And The Speedy Kid&lt;/h1>
+   <br>
+	&lt;h3>Chapter 1: The Loss&lt;/h3>
+   &lt;p>Jhon slamed The Door Shut &lt;br> He Was So Mad That He Was Beaten By A 3rd Grader&lt;/p>
+   <br>
+   &lt;p>"Are you okay up There?" His Mom Called&lt;/p>
+   <br>
+   &lt;p>"Doing Great" Jhon said Sarcasticly&lt;/p>
+   <br>
+   &lt;/body>
+   <br>
+   &lt;/html>
+   </p></div>
+	<p>Lets Say i Want to make My background a nice paper white and my text black, what i am going to do is underneath style write: body{color:; background-color:;} make sure to use the curly brakets "{}", Heres an example:</p>
+<div class="code"><p>&lt;!DOCTYPE html>
+   <br>
+   &lt;html>
+   <br>
+   &lt;head>
+   <br>
+   &lt;meta charset="utf-8">
+   <br>
+   &lt;title>Example&lt;/title>
+   <br>
+	&lt;style>
+	<br>
+	body{
+	<br>
+	color:rgb(0, 0, 0);
+	<br>
+	background-color:rgb(255, 255, 255);
+	<br>
+	}
+	<br>
+	&lt;/style>
+	<br>
+   &lt;/head>
+   <br>
+   &lt;body>
+	<br>
+	&lt;h1>Jhon And The Speedy Kid&lt;/h1>
+   <br>
+	&lt;h3>Chapter 1: The Loss&lt;/h3>
+   &lt;p>Jhon slamed The Door Shut &lt;br> He Was So Mad That He Was Beaten By A 3rd Grader&lt;/p>
+   <br>
+   &lt;p>"Are you okay up There?" His Mom Called&lt;/p>
+   <br>
+   &lt;p>"Doing Great" Jhon said Sarcasticly&lt;/p>
+   <br>
+   &lt;/body>
+   <br>
+   &lt;/html>
+   </p></div>
+	<p>Here's What that would look like:</p>
+	<div class="codeex" style="background-color:rgb(255, 255, 255); color:rgb(0, 0, 0);"><h1>Jhon And The Speedy Kid</h1>
+<h3>Chapter 1: The Loss</h3>
+<p>Jhon slamed The Door Shut <br> He Was So Mad That He Was Beaten By A 3rd Grader</p>
+<p>"Are you okay up There?" His Mom Called</p>
+<p>"Doing Great" Jhon said Sarcasticly</p>
+   </div>
+	
     </body>
 </html>
