--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 			color:blue;
 		  }
     </style>
+	  <link rel="shortcut icon" type="image/jpg" href="/scratch_assets/favicon.png"/>
+
   </head>
   <body>
     <h1 class="indexpx">CA Productions Home Page</h1>
@@ -23,7 +25,7 @@
     <p class="indexpx">Check Out Our Favorite Rated games <a href="/home/the-best-video-games.html" class="link">Here</a><br>
       Also There Are Some Cool Things You Can Do <a href="/home/coolstuff.html" class="link">Here</a><br>
       Check Out Our Scratch Projects <a href="/home/scratch.html" class="link">Here</a><br>
-	  Find out how to create your own website just like this <a href="/home/learnhtml.html">here</a><br></p>
+	  Find out how to create your own website just like this <a href="/home/learnhtml.html" class="link">Here</a><br></p>
       <a href="https://Caproductions.github.io/home">
         <button class="button">
     Meet The Creators
