--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			color:blue;
 		  }
     </style>
-	  <link rel="shortcut icon" type="image/jpg" href="/scratch_assets/favicon.png"/>
+	  <link rel="shortcut icon" type="image/png" href="/scratch_assets/favicon.png"/>
 
   </head>
   <body>
